# ATOM-MATRIX-rs

./: Cargo.toml  README.md
.cargo/: config.toml
atommatrix/: Cargo.toml
atommatrix/src/: main.rs
src/: main.rs
