[package]
name = "ATOM-MATRIX-rs"
version = "0.1.0"
authors = ["Placeless <thinkoverheat@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics = { version = "0.8.1", default-features = false }
esp-hal = { version = "0.23.1", features = [ "esp32", "default" ] }
log = { version = "0.4.22" }
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
panic-halt = "1.0.0"
xtensa-lx-rt = "0.20.0"

[dependencies.sh1107g-rs]
path = "../sh1107g-rs"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = true
strip = true
opt-level = 'z'
overflow-checks = false
panic = "abort" # panic-haltを使用するため、この設定は維持
